fixed skill banner spacing and made it responsive, and fixed about me banner height bug that created choppy animation

--- a/src/pages/homePage/components/skillsBanner/_skillsBanner.scss
+++ b/src/pages/homePage/components/skillsBanner/_skillsBanner.scss
@@ -35,7 +35,6 @@ $width: min(5vw, 4em);
   width: 100%;
   height: 100%;
   padding-top: calc(#{$width} * 1.75);
-  padding-bottom: calc(#{$width} * 1.75);
 }
 .#{$namespace}-media-content,
 .#{$namespace}-text-content {
