--- a/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
+++ b/src/pages/homePage/components/skillsBanner/_skillsBannerBreakpoints.scss
@@ -77,7 +77,7 @@ $namespace: s.$namespace;
 
     grid-template-columns: repeat(2, 1fr);
     padding-top: calc(#{$width} * 2);
-    padding-bottom: calc(#{$width} * 2);
+    // padding-bottom: calc(#{$width} * 2);
   }
 }
 @mixin skills-sm {
